--- a/index.html
+++ b/index.html
@@ -117,23 +117,23 @@
             </div>
 
             <footer>
-                <div>
+                <div id="firstdiv">
                     <li>About</li>
                     <li>Accesibility</li>
                     <li>Help Center</li>
                 </div>
 
-                <div>
+                <div id="seconddiv">
                     <li>Privacy & Terms</li>
                     <li>Ad Choices</li>
                 </div>
 
-                <div>
+                <div id="thirddiv">
                     <li>Advertising</li>
                     <li>Business Services</li>
                 </div>
 
-                <div>
+                <div id="fourthdiv">
                     <li>Get the LinkedIn App</li>
                     <li>More</li>
                 </div>
